fix wrap

--- a/css/wrap.css
+++ b/css/wrap.css
@@ -14,6 +14,7 @@
     position: absolute;
     width: 100%;
     min-width: 1170px;
+    z-index: 10;
 }
 .content_category ul {
     font-size: 0;
@@ -82,26 +83,38 @@
     font-family: 'noto_m';
     color: white;
 }
-/* .wrap .img1{
+.wrap .img1{
     background: url(/images/menuinfo_images/wrap_n_others/img_visual_wrap02.jpg) no-repeat;
-    position: absolute;
+    width: 600px;
+    height: 308px;
+    position:absolute;
+    top: 150px;
+    left: 0;
+}
+
+.wrap .img2{
+    background: url(/images/menuinfo_images/wrap_n_others/img_visual_wrap01.jpg) no-repeat;
     width: 416px;
     height: 308px;
-    left: 0;
-    top: 100px;
-    margin-left: 0;
-} */
+    position: absolute;
+    right: 100px;
+    top: 227px;
+}
 
 .wrap h2{
     font-size: 70px;
     font-family: 'sw_f';
     padding: 104px 0 21px 0;
+    position: relative;
+    z-index: 10;
 }
 
 .wrap > p{
     font-size: 16px;
     line-height: 26px;
     letter-spacing: -0.04em;
+    position: relative;
+    z-index: 10;
 }
 
 .prod_tab{
@@ -109,6 +122,7 @@
     width: 1170px;
     margin: -40px auto 0;
     background: url(/images/menuinfo_images/Sandwich/bg_tabbox.png) no-repeat;
+    position: relative;
 }
 .prod_tab li {
     display: inline-block;
@@ -205,7 +219,6 @@
     color: #666666;
     font-size: 16px;
     font-family: 'sw_s';
-    font-weight: bold;
     display: block;
     margin: 0 0 5px;
     letter-spacing: -0.06em;
